--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>hi</p>
+    <p>Elijah Frankle is a fourth year at the University of California Santa Barbara studying Computer Science, Theater Design, and Media Arts.
+      His praxis centers around the intersection of art and technology, including 
+      Lighting and Projection Design,
+      Immersive and Interactive Design,
+      Themed Entertainment,
+      Creativity Support Technology,
+      Computational and Installation Art,
+      and Control Systems and Software.</p>
+      <p>His art has been shown at CSU Fresno, the UCSB Glass Box Gallery, and the Santa Barbara Center for Art Science and Technology.
+      He has worked on designs for the LA Opera, Center Theater Group, Ensemble Theater Company, the Orpheus Project, California Lutheran University, and UCSB. </p>
+      <p>Email: ElijahFrankle626@gmail.com<br>
+         Phone: 805-990-0805
+    </p>
+    <img src="assets/WorkingInAlaska1.jpg" style="zoom:50%;">
   </body>
 </html>
