--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>Elijah Frankle is a fourth year at the University of California Santa Barbara studying Computer Science, Theater Design, and Media Arts.
+    <p><strong>Elijah Frankle</strong> is a fourth year at the University of California Santa Barbara studying Computer Science, Theater Design, and Media Arts.
       His praxis centers around the intersection of art and technology, including 
       Lighting and Projection Design,
       Immersive and Interactive Design,
